Reworked share-buttons - Fixed meta text vertical alignment - Reduced bottom padding by half

--- a/_sass/includes/_share_buttons.scss
+++ b/_sass/includes/_share_buttons.scss
@@ -1,12 +1,13 @@
 ul.share-buttons {
   list-style: none;
-  padding: $padding-x-small/2 0 $padding-x-small/2 0;
+  padding: $padding-x-small/2 0 $padding-x-small/4 0;
   margin: 0;
   text-align: center;
 
   div.meta {
     display: inline;
     margin-right: 0.5em;
+    vertical-align: super;
   }
 
   li {
